solution/ui/regulations/css/scss/partials/_reg_text.scss
//-----------------------------
// Main Reg Text View
//-----------------------------

@import "../application_settings";

.reg-text {
    overflow-wrap: break-word;
    overflow: auto;

    section,
    h1,
    h2,
    p {
        padding-left: 5px;
        &:focus {
            background: $section_highlight_color;
        }
    }

    h1 {
        color: $title_color;
        font-size: calc(var(--font-size-base) * 1.5);
        line-height: 1.4;

        @include screen-xxl {
            font-size: calc(var(--font-size-base) * 1.9);
            line-height: 1.5;
        }
    }

    mark.highlight {
        background-color: $mark-highlight;
    }

    .reference {
        position: absolute;
        margin-left: -1.5em;
        opacity: 0;

        &:focus {
            opacity: 1;
        }
    }

    section.part-meta {
        font-size: var(--font-size-sm);
    }

    h1 > .reference,
    h2 > .reference {
        margin-left: -1.2em;

        @include screen-xxl {
            margin-left: -1.4em;
        }
    }

    :hover {
        > .reference {
            opacity: 1;
        }
    }

    .section-title {
        color: $primary_color;
    }

    .section-info-row {
        display: flex;

        &--bottom {
            .info-links {
                align-items: center;
            }
        }
    }

    .view-resources-link  {
        .count {
            font-size: 12px;
        }
    }

    .info-links {
        font-size: 12px;
        display: flex;
        flex-direction: column;
        flex-wrap: wrap;
        gap: 1rem;
        margin-top: -10px;
        padding-left: 5px;
        line-height: 20px;

        > div {
            display: inline;
        }

        button.collapsible-title {
            display: flex;
            align-items: center;
            margin-top: 0;
            font-size: var(--font-size-sm);
            gap: var(--spacer-half);

            &.visible {
                color: $primary_link_color;
            }
        }

        @include custom-max(calc($mobile-max / 1px)) {
            > div:first-child {
                display: none;
            }
        }

        @include screen-lg {
            flex-direction: row;
        }

        @include screen-xl {
            flex-direction: row;
        }
    }

    .part-title {
        max-width: var(--text-max-width);
        margin: var(--spacer-5) 0 var(--spacer-3);
    }

    h2 {
        color: $title_color;
        font-size: calc(var(--font-size-base) * 1.2);

        @include screen-xxl {
            font-size: var(--font-size-2xl);
        }
    }

    .table-section {
        .table_head {
            margin: 15px 0 25px;

            p {
                margin: 0 !important;
            }

            p:first-child {
                font-size: var(--font-size-md);
                line-height: 1.5;
                font-weight: 700;
                font-family: $secondary_site_font;
                margin-top: 0 !important;
                margin-bottom: 5px !important;
            }
        }

        .gpotbl_div {
            table {
                border-spacing: 0;
                border-collapse: collapse;
                border: 1px solid $table_border_color;
                table-layout: auto;
                width: 100%;

                th,
                th ~ td {
                    table-layout: fixed;
                }

                th,
                td {
                    border: 1px solid $table_border_color;
                    padding: 9px 12px;
                    font-size: var(--font-size-sm);
                    line-height: 1.4;
                    text-align: left;
                    vertical-align: top;
                }

                th {
                    background: $table_header_background_color;
                }

                th[rowspan] {
                    vertical-align: middle;
                }

                th[colspan] {
                    text-align: center;
                }
            }
        }
    }

    .appendix-section {
        @include formula-special-border;

        margin-left: 10px;
        color: $secondary_text_color;

        h2.section-title {
            padding: 0px;
            color: $secondary_text_color;
            font-size: var(--font-size-md);
            line-height: 1.4;
            margin-top: 25px !important;

            @include screen-xl {
                font-size: var(--font-size-lg);
                line-height: 1.5;
            }
        }

        h3.heading1 {
            padding: 0px;
            color: $secondary_text_color;
            font-family: $secondary_site_font;
            font-size: var(--font-size-sm);
            line-height: 1.3;
            text-transform: capitalize;
            text-align: left;
            margin-top: 25px;

            @include screen-xl {
                font-size: var(--font-size-md);
                line-height: 1.4;
            }
        }

        .paragraphs {
            p {
                padding: 0px;

                e {
                    font-variant: normal;
                    font-weight: 700;
                }
            }
        }
    }

    .footnote-section {
        font-size: $font_size_xs;
        line-height: 1.5;
        color: $secondary_text_color;
    }

    fp,
    fp-1,
    fp1-2,
    fp-2,
    fp-3,
    fp-4,
    fp-5,
    fp-6,
    .synthetic-part-fp {
        @include formula-special-border;

        color: $secondary_text_color;
        display: block;

        &:not(:last-child),
        &:only-child {
            padding-bottom: 1em;
        }

        &:last-child:not(:only-child) {
            margin-bottom: 1em;
        }

        su {
            font-size: 70%;
        }
    }

    .up-to-date {
        box-sizing: unset;
        max-width: var(--text-max-width);
        margin: var(--spacer-5) auto 10px !important;
        font-size: var(--font-size-sm);
        color: $mid_gray;

        @include screen-xxl {
            padding: 0 0 0 10px;

            &.subpart {
                padding: 0 var(--spacer-6);

                b {
                    padding-left: 5px;
                }
            }

            & + .part-title {
                margin: 0 var(--spacer-6);
            }
        }

        & + article {
            margin: 0 auto var(--spacer-5);
        }

        & + .part-title {
            margin: 0 auto var(--spacer-3);
        }
    }
}

article {
    box-sizing: unset;
    max-width: var(--text-max-width);
    margin-top: var(--spacer-5);
    margin-bottom: var(--spacer-4);

    @include screen-xxl {
        margin: var(--spacer-5) auto;
        padding: 0 var(--spacer-6);
    }

    i {
        font-weight: bold;
    }

    p,
    section {
        padding: 0 var(--spacer-3) 0 var(--spacer-3);

        @for $i from 1 through 10 {
            &.depth-#{$i} {
                $left-indent: calc(var(--spacer-3) + var(--spacer-3) * ($i - 1));

                padding-left: $left-indent;

                // poor assumption: five contiguous section/img tags
                & + section {
                    padding-left: $left-indent;
                    & + section {
                        padding-left: $left-indent;
                        & + section {
                            padding-left: $left-indent;
                            & + section {
                                padding-left: $left-indent;
                                & + section {
                                    padding-left: $left-indent;
                                }
                            }
                        }
                    }
                }

                & + img {
                    @include formula-special-border;
                    margin-left: $left-indent;
                    & + img {
                        @include formula-special-border;
                        margin-left: $left-indent;
                        & + img {
                            @include formula-special-border;
                            margin-left: $left-indent;
                            & + img {
                                @include formula-special-border;
                                margin-left: $left-indent;
                                & + img {
                                    @include formula-special-border;
                                    margin-left: $left-indent;
                                }
                            }
                        }
                    }
                }
            }
        }
    }

    .paragraphs {
        font-size: var(--font-size-sm);
        line-height: 1.4;

        &:has(+ .view-resources-link) {
            margin-bottom: var(--spacer-2);
        }

        @include screen-xl {
            font-size: var(--font-size-md);
            line-height: 1.5;
        }
    }

    .section-text {
        line-height: 1.8em;
        display: inline;
    }
}

.next-previous {
    display: flex;
    margin: var(--spacer-7) auto;

    .next-prev {
        direction: table-cell;
        width: 50%;
        text-decoration: none;

        &.previous {
            &:before {
                background-image: url("#{$eregs-image-path}/previous.svg");
            }
        }

        &.next {
            text-align: right;

            &:before {
                background-image: url("#{$eregs-image-path}/next.svg");
            }
        }
    }

    .next-prev-label {
        font-weight: bold;
    }

    .next-prev-title {
        font-size: var(--font-size-sm);
        color: $primary_text_color;
    }
}

.effective-date-note {
    font-size: 13px;
    line-height: 18px;
    color: $secondary_text_color;

    .effective-date-note-header {
        font-weight: bold;
        text-transform: capitalize;
    }
}

.reg-image {
    max-width: 90%;
}

.btn {
    background-color: $mid_blue;
    color: white;
    border-radius: 3px;
    padding: 9px 10px 10px;
    border: none;
    cursor: pointer;
    gap: 3px;
    line-height: 12px;
}

.btn.inverted {
    color: $mid_blue;
    border: $mid_blue 2px solid;
    background-color: white;
    font-weight: 700;
    font-size: 16px;
    line-height: 20px;
    text-align: center;
}
.btn.disabled {
    background-color: #D6D7D9;
    color: $dark_gray;
}
.bold {
    font-weight: 600;
    font-size: 14px;
}
.bold.disabled {
    color: $mid_gray_3;
}

